<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="io.github.padamchopra.aarogya.reminder">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/enter_details_of_the_medicine"
            android:textColor="@color/black"
            android:textSize="26sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/be_reminded_when_its_about_to_expire"
            android:textSize="16sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:labelFor="@id/reminder_med_name_et"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:text="@string/med_name"
            android:textAlignment="center"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/reminder_med_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#eee"
            android:inputType="text"
            android:padding="5dp"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:labelFor="@id/reminder_manufacturer_name_et"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:text="@string/manufacturer"
            android:textAlignment="center"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/reminder_manufacturer_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#eee"
            android:inputType="text"
            android:padding="5dp"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:text="@string/optional"
            android:textSize="12sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/reminder_set_date_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-smallcaps"
            android:onClick="setExpiryDate"
            android:text="@string/set_expiry_date"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="sans-serif"
        android:onClick="createReminder"
        android:padding="15dp"
        android:text="@string/create_reminder"
        android:textColor="@color/almostWhite"
        android:textSize="20sp" />

</RelativeLayout>
