<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="io.github.padamchopra.aarogya.Profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/welcome_to_the_aarogya_app"
            android:textColor="@color/black"
            android:textSize="26sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_update_your_details"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:labelFor="@id/profile_first_name_et"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:text="@string/first_name"
                android:textAlignment="textEnd"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/profile_first_name_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="#eee"
                android:inputType="text"
                android:padding="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:labelFor="@id/profile_last_name_et"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:text="@string/last_name"
                android:textAlignment="textEnd"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/profile_last_name_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="#eee"
                android:inputType="text"
                android:padding="5dp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:labelFor="@id/profile_reference_et"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:text="@string/reference"
            android:textAlignment="center"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/profile_reference_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#eee"
            android:inputType="text"
            android:padding="5dp" />

    </LinearLayout>

    <Button
        android:onClick="saveDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="sans-serif"
        android:padding="15dp"
        android:text="@string/save_details"
        android:textColor="@color/almostWhite"
        android:textSize="20sp" />
</RelativeLayout>
