<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.padamchopra.aarogya.MainActivity">

    <LinearLayout
        android:id="@+id/home_no_active_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="20sp"
            android:paddingStart="20sp"
            android:text="@string/navigate_to_add_reminder_to_get_started"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="20sp"
            android:paddingStart="20sp"
            android:paddingTop="10sp"
            android:text="@string/there_are_no_active_reminders_as_of_now"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/home_active_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/here_are_your_active_reminders"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ListView
            android:id="@+id/home_active_reminder_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="12dp"
            android:divider="@color/colorPrimaryDark"
            android:dividerHeight="0.1sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/home_total_reminders_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="sans-serif-smallcaps"
        android:padding="10dp"
        android:text="Reminded you about x expiries till date!"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="15sp"/>
</RelativeLayout>
