<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    tools:context="io.github.padamchopra.aarogya.about">

    <ImageView
        android:id="@+id/about_aarogya_cover_iv"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginTop="0dp"
        android:adjustViewBounds="true"
        android:background="#fff"
        android:contentDescription="@string/aarogya_cover_photo"
        android:padding="60dp"
        android:scaleType="centerCrop"
        android:src="@drawable/aarogya_cover" />


    <ImageView
        android:id="@+id/about_meet_the_team_iv"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/about_aarogya_cover_iv"
        android:layout_marginTop="30dp"
        android:background="#ffffff"
        android:contentDescription="@string/meet_team"
        android:paddingTop="5dp"
        android:scaleType="fitCenter"
        android:src="@drawable/meettheteam" />

    <LinearLayout
        android:id="@+id/about_meet_the_team_linlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_meet_the_team_iv"
        android:orientation="horizontal"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scaleType="fitCenter"
                android:src="@drawable/daksh" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="Daksh"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scaleType="fitCenter"
                android:src="@drawable/keshav" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="Keshav"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scaleType="fitCenter"
                android:src="@drawable/parth" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="Parth"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scaleType="fitCenter"
                android:src="@drawable/sahar" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="Sahar"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/about_footer"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/for_more_info"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="redirectToFB"
            android:paddingEnd="3dp"
            android:paddingStart="3dp"
            android:text="@string/facebook"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/about_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="monospace"
        android:onClick="redirectToPadam"
        android:padding="10sp"
        android:text="@string/padam_chopra"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textStyle="normal" />

</RelativeLayout>